comment-like controller and service added